[package]
name = "hpm6280"
version = "0.0.1"
authors = ["Ahmed Charles <me@ahmedcharles.com>"]
description = "With svd2rust generated peripherals for HPM6280 MCU's."
keywords = ["riscv", "register", "peripheral"]
categories = ["embedded", "hardware-support", "no-std"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.0", optional = true }
riscv = "0.12.0"
riscv-rt = { version = "0.12.0", optional = true }
vcell = "0.1.3"

[features]
rt = ["riscv-rt"]
